--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,10 +4,10 @@
       "path": "force-app",
       "default": true,
       "package": "HUD",
-      "versionName": "ver 0.1",
-      "versionNumber": "0.1.0.NEXT",
+      "versionName": "ver 1.0.0",
+      "versionNumber": "1.0.0.NEXT",
       "dependencies": [],
-      "versionDescription": "HUD Managed"
+      "versionDescription": "HUD Version 1.0.0"
     }
   ],
   "name": "HUD",
@@ -16,6 +16,7 @@
   "sourceApiVersion": "58.0",
   "packageAliases": {
     "HUD": "0HoHn000000PAwZKAW",
-    "HUD@0.1.0-1": "04tHn000000yVzTIAU"
+    "HUD@0.1.0-1": "04tHn000000yVzTIAU",
+    "HUD@1.0.0-1": "04tHn000000yVzYIAU"
   }
 }
