adding test coverage and releasing as promoted test release

--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,7 +1,8 @@
 {
-  "orgName": "jazahn company",
+  "orgName": "Harvard University",
   "edition": "Developer",
   "features": ["EnableSetPasswordInApi"],
+  "namespace": "huit",
   "settings": {
     "lightningExperienceSettings": {
       "enableS1DesktopEnabled": true
