--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -4,8 +4,8 @@
       "path": "force-app",
       "default": true,
       "package": "HUD",
-      "versionName": "v0.6.0",
-      "versionNumber": "0.6.0.NEXT",
+      "versionName": "v1.0.0",
+      "versionNumber": "1.0.0.NEXT",
       "dependencies": [],
       "versionDescription": "Harvard University Data Version 1.0.0",
       "postInstallScript": "PostInstallScript",
@@ -23,6 +23,8 @@
   "sourceApiVersion": "58.0",
   "packageAliases": {
     "HUD": "0HoHn000000PAwZKAW",
-    "HUD@0.6.0": "04tHn000000yXDKIA2"
+    "HUD@0.6.0": "04tHn000000yXDKIA2",
+    "HUD@1.0.0-6": "04tHn000000yXcBIAU",
+    "HUD@1.0.0-7": "04tHn000000yXcGIAU"
   }
 }
